<resources>
    <string name="app_name">会籍通</string>
    <string name="app_name_dev">会籍通测试</string>
    <string name="login_1">登录</string>
    <string name="login_2">请填写用户名</string>
    <string name="login_3">请填写密码</string>
    <string name="login_4">账号</string>
    <string name="login_5">密码</string>
    <string name="login_6">忘记密码？请联系客服</string>
    <string name="login_7">400–060–1233 </string>
    <string name="login_8">请输入账号</string>
    <string name="login_9">请输入密码</string>
    <string name="main_menu_1">首页</string>
    <string name="main_menu_2">扫一扫</string>
    <string name="main_menu_3">我的</string>
    <string name="cancel">取消</string>
    <string name="exit">确认退出</string>
    <string name="exit_message">是否确认退出登录?</string>
    <string name="mine_1">退出登录</string>
    <string name="mine_2">我的</string>
    <string name="mine_3">三亚海棠湾海中海高尔夫球会</string>
    <string name="mine_4">Haizhonghai golf club, Haitang Bay, Sanya</string>
    <string name="mine_5">修改密码</string>
    <string name="mine_6">联系客服</string>
    <string name="mine_7">400–060–1233</string>
    <string name="pass_word_1">提 交</string>
    <string name="pass_word_2">修改密码</string>
    <string name="pass_word_3">请填写旧密码</string>
    <string name="pass_word_4">请填写新密码</string>
    <string name="pass_word_5">请填写新密码</string>
    <string name="pass_word_6">原&#8194;密&#8194;码</string>
    <string name="pass_word_7">新&#8194;密&#8194;码</string>
    <string name="pass_word_8">再次输入</string>
    <string name="pass_word_9">请输入原密码</string>
    <string name="pass_word_10">请输入新密码</string>
    <string name="pass_word_11">请再次输入密码</string>
    <string name="pass_word_12">两次密码输入不一致</string>
    <string name="pass_word_13">修改成功！</string>
    <string name="main_1">累计消费场次</string>
    <string name="main_2">核销成功记录</string>
    <string name="main_3">近七日</string>
    <string name="main_4">本周</string>
    <string name="main_5">本月</string>
    <string name="main_6">今年</string>
    <string name="main_7">首页</string>
    <string name="main_8">我的</string>
    <string name="rv_top_1">会籍卡</string>
    <string name="rv_top_2">消费人次</string>
    <string name="rv_top_3">消费场次</string>
    <string name="rv_top_4">日 期</string>
    <string name="send_share">分\u3000享</string>
    <string name="service_bind_success">服务绑定成功</string>
    <string name="service_bind_fail">服务绑定失败</string>
    <string name="printer_link_timeout">打印机连接超时，您可以检查是否安装了对应设备的服务程序，或着您可以尝试关机并重新开机。</string>
    <string name="code_result_1">会员身份</string>
    <string name="code_result_2">无效二维码</string>
    <string name="code_result_3">返 回</string>
    <string name="code_result_4">会籍信息</string>
    <string name="code_result_5">电子会籍认证失效\n请重新认证 </string>
    <string name="code_result_6">会员姓名：</string>
    <string name="code_result_7">会&#8194;籍&#8194;ID：</string>
    <string name="code_result_8">会&#8194;籍&#8194;卡：</string>
    <string name="code_result_9">未查询到订场信息</string>
    <string name="code_result_10">核 销</string>
    <string name="code_result_11">预定场次</string>
    <string name="code_result_12">确认核销信息</string>
    <string name="code_result_13">订单号：</string>
    <string name="code_result_14">打球人数：</string>
    <string name="code_result_15">洞数：</string>
    <string name="code_result_16">是否确认核销？</string>
    <string name="code_result_17">确认核销</string>
    <string name="code_result_18">打球时间：</string>
    <string name="code_result_19">请选择一个场次</string>
    <string name="verify_result_1">核销结果</string>
    <string name="verify_result_2">核销成功</string>
    <string name="verify_result_3">核销失败</string>
    <string name="verify_result_4">返回首页</string>
    <string name="verify_result_5">继续扫码</string>
    <string name="verify_result_6">导致核销失败的原因：</string>
    <string name="verify_result_7">1、该场次已被核销\n2、会籍失效\n3、系统故障</string>

    <string name="action_exit">退出</string>
    <string name="action_restart">重启</string>
    <string name="error_title">程序错误</string>
    <string name="error_message">对不起！应用程序出现异常退出了</string>

    <string name="print_name">会员姓名：&#8195;</string>
    <string name="print_people">打球人数：&#8195;</string>
    <string name="print_date">打球时间：&#8195;</string>
    <string name="print_current_date">打印时间：&#8195;</string>
    <string name="print_id">会员ID：&#8195;&#8195;</string>
    <string name="print_card">会籍卡：&#8195;&#8195;</string>
    <string name="print_order">订单号：&#8195;&#8195;</string>
    <string name="print_caves">洞数：&#8195;&#8195;&#8195;</string>


</resources>
