<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <include
        android:id="@+id/title"
        layout="@layout/toolbar_layout" />
    <View
        android:id="@+id/line"
        app:layout_constraintTop_toBottomOf="@+id/title"
        style="@style/Line"/>

    <TextView
        android:id="@+id/tv_1"
        android:text="@string/pass_word_6"
        android:textSize="15sp"
        android:textColor="@color/black3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="@+id/et_old"
        app:layout_constraintBottom_toBottomOf="@+id/et_old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_old"
        app:layout_constraintTop_toBottomOf="@+id/line"
        android:layout_marginTop="40dp"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:hint="@string/pass_word_9"
        app:layout_constraintStart_toEndOf="@+id/tv_1"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="13dp"
        style="@style/edittext_input_2" />

    <TextView
        android:id="@+id/tv_2"
        android:text="@string/pass_word_7"
        android:textSize="15sp"
        android:textColor="@color/black3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="@+id/et_new"
        app:layout_constraintBottom_toBottomOf="@+id/et_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_new"
        app:layout_constraintTop_toBottomOf="@+id/et_old"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:hint="@string/pass_word_10"
        app:layout_constraintStart_toEndOf="@+id/tv_1"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="13dp"
        style="@style/edittext_input_2" />

    <TextView
        android:id="@+id/tv_3"
        android:text="@string/pass_word_8"
        android:textSize="15sp"
        android:textColor="@color/black3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="@+id/et_again"
        app:layout_constraintBottom_toBottomOf="@+id/et_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/et_again"
        app:layout_constraintTop_toBottomOf="@+id/et_new"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:hint="@string/pass_word_11"
        app:layout_constraintStart_toEndOf="@+id/tv_1"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="13dp"
        style="@style/edittext_input_2" />

    <Button
        android:id="@+id/btn_commit"
        app:layout_constraintTop_toBottomOf="@+id/et_again"
        android:layout_marginTop="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        style="@style/Button"
        android:text="@string/pass_word_1"
        />
</androidx.constraintlayout.widget.ConstraintLayout>