<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:paddingBottom="20dp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_date"
        android:text="@string/rv_top_1"
        android:layout_weight="1"
        android:textColor="@color/black5"
        android:textSize="13sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_member_name"
        android:text="@string/rv_top_2"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/black5"
        android:textSize="13sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_frequ"
        android:text="@string/rv_top_3"
        android:layout_weight="1"
        android:gravity="right"
        android:textColor="@color/black5"
        android:textSize="13sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>