<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:paddingTop="20dp"
    android:paddingBottom="30dp"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/rv_top_1"
        android:layout_weight="1"
        android:textColor="@color/base1"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/rv_top_2"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/base1"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/rv_top_3"
        android:layout_weight="1"
        android:gravity="right"
        android:textColor="@color/base1"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>