<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/title"
        layout="@layout/toolbar_layout" />

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="40dp"
        android:scaleType="centerInside"
        android:src="@drawable/verify_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_result_2"
        android:textColor="@color/base1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_bg" />

    <TextView
        android:id="@+id/tv_fail_1"
        android:text="@string/verify_result_6"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black5"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_fail_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:lineSpacingExtra="10dp"
        android:text="@string/verify_result_7"
        android:textColor="@color/white1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_fail_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_fail_1" />
    <Button
        android:id="@+id/btn_back"
        style="@style/ButtonGray"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/verify_result_4"
        app:layout_constraintBottom_toTopOf="@+id/btn_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_again"
        style="@style/Button"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/verify_result_5"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_fail_message"
        android:visibility="gone"
        app:constraint_referenced_ids="tv_fail_1,tv_fail_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>