<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_order_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/iv_sel"
        android:background="@drawable/cb_sel_true"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="13dp"
        app:layout_constraintTop_toTopOf="@+id/iv_bg"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bg"
        android:layout_width="36dp"
        android:layout_height="36dp"/>
    <TextView
        android:id="@+id/tv_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code_result_13"
        android:textColor="@color/black3"
        android:textSize="14sp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_num"
        app:layout_constraintTop_toTopOf="@+id/iv_bg" />

    <TextView
        android:id="@+id/tv_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code_result_14"
        android:textColor="@color/black3"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_count"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_id"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code_result_15"
        android:textColor="@color/black3"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_num"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent" />
    <ImageView
        android:id="@+id/iv_bottom"
        app:layout_constraintTop_toBottomOf="@+id/iv_bg"
        android:background="@drawable/item_order_bottom_sel"
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <TextView
        android:id="@+id/tv_time"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/iv_bottom"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>